Fixed am/pm spacing
The pm button now lives on the same line as the am button.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ div.time-picker div.clock div.am-pm-info div.pm {
   color: black;
   border: solid 1px #DADADA;
   font-size: 0.7em;
-  padding: 4px 7px;
+  padding: 4px 5px;
   border-radius: 3px;
   background: white;
   cursor: pointer;
